@@ -40,10 +40,11 @@
 
   Version 5.1.0  2012-09-
   ------------------------------------------------------------------------------
-    - bug fix: filters forced to be case insensitive for all the characters
-      (they worked properly for English characters only)
+    - added fragmentation percentage display to all the interfaces
     - added settings for file pattern groups to easier exclude or include
       groups of files (fixes issue #3449331)
+    - bug fix: filters forced to be case insensitive for all the characters
+      (they worked properly for English characters only)
 
     - the following translations were added:
 
